Reduce template nesting to top level

--- a/templates/simple_rag/build.ipynb
+++ b/templates/simple_rag/build.ipynb
@@ -80,9 +80,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-Nov-11 11:49:18.44| INFO     | superduper.misc.plugins:13   | Loading plugin: mongodb\n",
-      "2024-Nov-11 11:49:18.49| INFO     | superduper.base.datalayer:76   | Building Data Layer\n",
-      "2024-Nov-11 11:49:18.49| INFO     | superduper.base.build:184  | Configuration: \n",
+      "2024-Nov-13 14:14:12.84| INFO     | superduper.misc.plugins:13   | Loading plugin: mongodb\n",
+      "2024-Nov-13 14:14:12.88| INFO     | superduper.base.datalayer:68   | Building Data Layer\n",
+      "2024-Nov-13 14:14:12.88| INFO     | superduper.base.build:184  | Configuration: \n",
       " +---------------+--------------+\n",
       "| Configuration |    Value     |\n",
       "+---------------+--------------+\n",
@@ -436,7 +436,16 @@
    "execution_count": 16,
    "id": "e6787c78-4b14-4a72-818b-450408a74331",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-Nov-13 14:14:13.60| INFO     | superduper.components.application:39   | Resorting components based on topological order.\n",
+      "2024-Nov-13 14:14:13.60| INFO     | superduper.components.application:56   | New order of components: <generator object topological_sort at 0x136584190>\n"
+     ]
+    }
+   ],
    "source": [
     "from superduper import Application\n",
     "\n",
@@ -487,10 +496,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-Nov-11 11:49:19.42| WARNING  | superduper.base.document:479  | Leaf listener:chunker already exists\n",
-      "2024-Nov-11 11:49:19.42| WARNING  | superduper.base.document:479  | Leaf model:chunker already exists\n",
-      "2024-Nov-11 11:49:19.43| WARNING  | superduper.base.document:479  | Leaf datatype:dill already exists\n",
-      "2024-Nov-11 11:49:19.43| WARNING  | superduper.base.document:479  | Leaf var-table-name-select-var-id-field-x already exists\n"
+      "2024-Nov-13 14:14:13.61| WARNING  | superduper.components.listener:74   | output_table not found in listener.dict()\n",
+      "2024-Nov-13 14:14:13.61| WARNING  | superduper.components.listener:74   | output_table not found in listener.dict()\n",
+      "2024-Nov-13 14:14:13.61| WARNING  | superduper.base.document:565  | Leaf listener:chunker already exists\n",
+      "2024-Nov-13 14:14:13.61| WARNING  | superduper.components.listener:74   | output_table not found in listener.dict()\n",
+      "2024-Nov-13 14:14:13.61| WARNING  | superduper.base.document:565  | Leaf model:chunker already exists\n",
+      "2024-Nov-13 14:14:13.62| WARNING  | superduper.base.document:565  | Leaf datatype:dill already exists\n",
+      "2024-Nov-13 14:14:13.62| WARNING  | superduper.base.document:565  | Leaf var-table-name-select-var-id-field-x already exists\n"
      ]
     }
    ],
@@ -561,7 +573,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-Nov-11 11:49:19.43| WARNING  | superduper.base.document:479  | Leaf str already exists\n"
+      "2024-Nov-13 14:14:13.62| WARNING  | superduper.base.document:565  | Leaf str already exists\n"
      ]
     }
    ],
